# python

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  LICENSE  README.md  conda.yaml  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: .gitignore  _quarto.yml  index.qmd  styles.css  theme-dark.scss  theme-light.scss
docs/lessons/: 00-start-here.qmd  01-colab-quickstart.qmd  02-install-python-vscode-jupyter.qmd  03-values-variables-types.qmd  04-strings-input-output.qmd  05-conditionals.qmd  06-loops.qmd  07-lists-tuples.qmd  08-dictionaries-sets.qmd  09-functions.qmd  10-debugging-errors.qmd  11-files-exceptions.qmd  12-modules-packages-environments.qmd  13-testing-style-linting.qmd  14-classes-oop.qmd  15-python-power-tools.qmd  16-scientific-python.qmd  17-data-science.qmd  18-ai-libraries.qmd  19-capstone.qmd  _lesson-template.qmd  index.qmd  instructor-notes.qmd  learner-profiles.qmd
lessons/: index.html  instructor-notes.html  learner-profiles.html
lessons/advanced-python-patterns/: comprehensions.html  context-managers.html  decorators.html  index.html  iterables-and-generators.html  logging-and-configuration.html
lessons/capstone/: index.html  presentation-and-rubric.html  project-selection-and-planning.html  testing-and-readme.html
lessons/code-quality/: index.html  pre-commit-and-ci.html  style-formatting-and-linting.html  testing-with-pytest.html  type-checking.html
lessons/core-python/: booleans-and-conditionals.html  indentation.html  index.html  loops-and-tracing.html  strings-input-output.html  values-variables-types.html
lessons/data-science/: communicating-results.html  grouping-and-statistics.html  index.html  inspecting-selecting-cleaning.html  visualization-with-seaborn.html  workflow-and-loading.html
lessons/data-structures/: dictionaries.html  index.html  lists.html  nested-data.html  sets.html  tuples.html
lessons/debugging/: debugging-tools.html  error-messages.html  index.html  minimal-reproducible-examples.html
notebooks/: 03_values_variables_types_quiz.ipynb
scripts/: build_colab_notebooks.py
tests/: test_package.py  test_questions.py
(+196 files in other folders)
