[project]
name = "fcpython"
version = "0.4.3"  # semantic-release
description = "Beginner-first Python course materials and helper tools."
readme = "README.md"
requires-python = ">=3.10,<4"
license = "BSD-3-Clause"
authors = [
  { name = "Ivan Ogasawara" }
]
keywords = [
  "education",
  "python",
  "open-science",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "matplotlib>=2",
  "numpy>=2",
  "ipywidgets>=6",
  "ipython>=7",
  "sympy>=1"
]

[project.urls]
Homepage = "https://github.com/freecampus-org/python"
Repository = "https://github.com/freecampus-org/python"
Issues = "https://github.com/freecampus-org/python/issues"
Documentation = "https://freecampus-org.github.io/python/"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3",
  "makim==1.29.0",
]
docs = []

[tool.poetry.group.dev.dependencies]
quarto-cli = ">=1.9.0"
pytest = ">=8"
pytest-cov = ">=5"
ruff = ">=0.6"
mypy = ">=1.10"
pre-commit = ">=3"
makim = "==1.29.0"
click = "^8.4.1"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "fcpython", from = "src" },
]
include = [
  "src/fcpython/py.typed",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "RUF",
]
ignore = [
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "IPython.*",
  "ipywidgets.*",
  "sympy.*",
  "matplotlib.*",
  "numpy.*",
]
ignore_missing_imports = true
